# Logic-Minimization-and-SystemC-Simulation

./: app  assign.cc  assign.hh  driver.cc  driver.hh  main.cc  makefile  module.cc  module.hh  parser.cc  parser.hh  parser.y  scanner.cc  scanner.l  util.cc  util.hh  verilog.v  wire.cc  wire.hh
sysc/: CMakeLists.txt  primitive.cc  primitive.hh  sysc.cc
